Fix sizing in header
Sizing was too small because I was using a minimized reference. Adjust header sizing to match full screen reference image.

--- a/style.css
+++ b/style.css
@@ -1,21 +1,41 @@
 body {
     background-color: #1d2a40;
+    font-family: sans-serif;
 }
 
 .header {
     display: flex;
     color: white;
     justify-content: space-between;
-    font-family: sans-serif;
-    font-size: 10px;
+    font-size: 26px;
     font-weight: 550;
-    padding: 0 80px;
+    padding: 0 200px;
+    align-content: center;
 }
 
 .header-links {
     color: rgb(188, 186, 186);
-    font-size: 8px;
+    font-size: 18px;
     font-weight: 400;
     display: flex;
-    gap: 8px;
+    gap: 26px;
+}
+
+.title-container {
+    display: flex;
+    padding: 60px 80px;
+}
+
+.title {
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.subtitle {
+    font-size: 8px;
+}
+
+img {
+    width: 200px;
 }
